# data-gov-metadata-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  crawler.py  crawler_builders.py  crawler_helpers.py  db.py  docker-compose.yml  export_db_tables_csv.py  logger.py  pyproject.toml
docs/: README.md
migrations/: datagov_datasets-creation_sql.sql
src/: db.py  main.py
src/crawler/: crawler.py  crawler_builders.py  crawler_helpers.py  export_db_tables_csv.py
src/data_gov_datasets_explorer/: db.py  main.py  models.py
src/data_gov_datasets_explorer/crawler/: crawler.py  crawler_builders.py  crawler_helpers.py
src/data_gov_datasets_explorer/export_db/: export_db_csv.py
src/data_gov_datasets_explorer/seeding/: users.py
src/data_gov_datasets_explorer/webapp/: __main__.py  app.py  services.py
src/data_gov_datasets_explorer/webapp/static/: styles.css
src/data_gov_datasets_explorer/webapp/templates/: actions_projects.html  actions_usage.html  actions_users.html  analytics_organizations.html  analytics_projects.html  analytics_tags.html  base.html  dashboard.html  explore_datasets.html  explore_user.html
